--- a/index.html
+++ b/index.html
@@ -29,49 +29,79 @@
                     <div class="jumbotron mt-3 mb-3">
                         <h1 class="display-4">Snippets <img src="favicon.png" height="50px"></h1>
                         <p class="lead">For reuse of sublime code.</p>
-
                         <a target="_blank" href="https://github.com/DaanRosendal/snippets" class="text-dark"><i class="fab fa-github fa-2x"></i></a>
                     </div>
 
                     <!-- Bootstrapious Sidebars -->
                     <div class="list-group mb-3">
-                        <a target="_blank" href="https://bootstrapious.com/p/bootstrap-sidebar" title="Source"
-                           class="list-group-item list-group-item-action flex-column align-items-start active">
-                            <div class="d-flex w-100 justify-content-between">
-                                <h5 class="mb-1">Bootstrapious Sidebars</h5>
-                                <small><span class="align-middle">Bootstrap 4</span></small>
-                            </div>
+                        <a target="_blank" href="https://bootstrapious.com/p/bootstrap-sidebar" title="Source" class="list-group-item list-group-item-action flex-column align-items-start active">
+                            <h3 class="mb-1">Bootstrapious Sidebars</h3>
                         </a>
-                        <a target="_blank" href="https://snippets.daanrosendal.com/bootstrapious-sidebars/fixed/"
-                           class="list-group-item list-group-item-action flex-column align-items-start">
-                            <div class="d-flex w-100 justify-content-between">
-                                <h5 class="mb-1">Fixed</h5>
+                        <li class="list-group-item flex-column align-items-start">
+                            <div class="row">
+                                <div class="col-9 align-middle">
+                                    <h5 class="align-middle mb-1">Fixed</h5>
+                                </div>
+                                <div class="col-3 align-middle">
+                                    <div class=" float-right justify-content-right d-flex">
+                                        <a target="_blank" title="Demo" href="https://snippets.daanrosendal.com/bootstrapious-sidebars/fixed" class="text-dark pr-2 pl-2"><i class="fas fa-eye fa-lg align-middle"></i></a>
+                                        <a target="_blank" title="Code" href="https://github.com/DaanRosendal/snippets/tree/master/bootstrapious-sidebars/fixed" class="text-dark pl-2"><i class="fab fa-github fa-lg align-middle"></i></a>
+                                    </div>
+                                </div>
                             </div>
-                        </a>
-                        <a target="_blank" href="https://snippets.daanrosendal.com/bootstrapious-sidebars/fixed-transparent/"
-                           class="list-group-item list-group-item-action flex-column align-items-start">
-                            <div class="d-flex w-100 justify-content-between">
-                                <h5 class="mb-1">Fixed Transparent</h5>
+                        </li>
+                        <li class="list-group-item flex-column align-items-start">
+                            <div class="row">
+                                <div class="col-9 align-middle">
+                                    <h5 class="align-middle mb-1">Fixed Transparent</h5>
+                                </div>
+                                <div class="col-3 align-middle">
+                                    <div class=" float-right justify-content-right d-flex">
+                                        <a target="_blank" title="Demo" href="https://snippets.daanrosendal.com/bootstrapious-sidebars/fixed-transparent" class="text-dark pr-2 pl-2"><i class="fas fa-eye fa-lg align-middle"></i></a>
+                                        <a target="_blank" title="Code" href="https://github.com/DaanRosendal/snippets/tree/master/bootstrapious-sidebars/fixed-transparent" class="text-dark pl-2"><i class="fab fa-github fa-lg align-middle"></i></a>
+                                    </div>
+                                </div>
                             </div>
-                        </a>
-                        <a target="_blank" href="https://snippets.daanrosendal.com/bootstrapious-sidebars/static/"
-                           class="list-group-item list-group-item-action flex-column align-items-start">
-                            <div class="d-flex w-100 justify-content-between">
-                                <h5 class="mb-1">Static</h5>
+                        </li>
+                        <li class="list-group-item flex-column align-items-start">
+                            <div class="row">
+                                <div class="col-9 align-middle">
+                                    <h5 class="align-middle mb-1">Static</h5>
+                                </div>
+                                <div class="col-3 align-middle">
+                                    <div class=" float-right justify-content-right d-flex">
+                                        <a target="_blank" title="Demo" href="https://snippets.daanrosendal.com/bootstrapious-sidebars/static" class="text-dark pr-2 pl-2"><i class="fas fa-eye fa-lg align-middle"></i></a>
+                                        <a target="_blank" title="Code" href="https://github.com/DaanRosendal/snippets/tree/master/bootstrapious-sidebars/static" class="text-dark pl-2"><i class="fab fa-github fa-lg align-middle"></i></a>
+                                    </div>
+                                </div>
                             </div>
-                        </a>
-                        <a target="_blank" href="https://snippets.daanrosendal.com/bootstrapious-sidebars/static-partially-collapsing/"
-                           class="list-group-item list-group-item-action flex-column align-items-start">
-                            <div class="d-flex w-100 justify-content-between">
-                                <h5 class="mb-1">Static Partially Collapsing</h5>
+                        </li>
+                        <li class="list-group-item flex-column align-items-start">
+                            <div class="row">
+                                <div class="col-9 align-middle">
+                                    <h5 class="align-middle mb-1">Static Partially Collapsing</h5>
+                                </div>
+                                <div class="col-3 align-middle">
+                                    <div class=" float-right justify-content-right d-flex">
+                                        <a target="_blank" title="Demo" href="https://snippets.daanrosendal.com/bootstrapious-sidebars/static-partially-collapsing" class="text-dark pr-2 pl-2"><i class="fas fa-eye fa-lg align-middle"></i></a>
+                                        <a target="_blank" title="Code" href="https://github.com/DaanRosendal/snippets/tree/master/bootstrapious-sidebars/static-partially-collapsing" class="text-dark pl-2"><i class="fab fa-github fa-lg align-middle"></i></a>
+                                    </div>
+                                </div>
                             </div>
-                        </a>
-                        <a target="_blank" href="https://snippets.daanrosendal.com/bootstrapious-sidebars/static-fancy/"
-                           class="list-group-item list-group-item-action flex-column align-items-start">
-                            <div class="d-flex w-100 justify-content-between">
-                                <h5 class="mb-1">Static Fancy</h5>
+                        </li>
+                        <li class="list-group-item flex-column align-items-start">
+                            <div class="row">
+                                <div class="col-9 align-middle">
+                                    <h5 class="align-middle mb-1">Static Fancy</h5>
+                                </div>
+                                <div class="col-3 align-middle">
+                                    <div class=" float-right justify-content-right d-flex">
+                                        <a target="_blank" title="Demo" href="https://snippets.daanrosendal.com/bootstrapious-sidebars/static-fancy" class="text-dark pr-2 pl-2"><i class="fas fa-eye fa-lg align-middle"></i></a>
+                                        <a target="_blank" title="Code" href="https://github.com/DaanRosendal/snippets/tree/master/bootstrapious-sidebars/static-fancy" class="text-dark pl-2"><i class="fab fa-github fa-lg align-middle"></i></a>
+                                    </div>
+                                </div>
                             </div>
-                        </a>
+                        </li>
                     </div>
                 </div>
             </div>
