--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                     </div>
 
                     <!-- Bootstrapious Sidebars -->
-                    <div class="list-group mb-3">
-                        <a target="_blank" href="https://bootstrapious.com/p/bootstrap-sidebar" title="Source" class="list-group-item list-group-item-action flex-column align-items-start active">
+                    <ul class="list-group mb-3">
+                        <a target="_blank" href="https://bootstrapious.com/p/bootstrap-sidebar" title="Source" class="list-group-item list-group-item-action flex-column align-items-start active bg-dark border-0">
                             <h3 class="mb-0">Bootstrapious Sidebars</h3>
                         </a>
                         <li class="list-group-item flex-column align-items-start">
