implemented coding exercises

--- a/index.html
+++ b/index.html
@@ -102,7 +102,66 @@
                                 </div>
                             </div>
                         </li>
-                    </div>
+                    </ul>
+
+                    <!-- Bootstrapious Sidebars -->
+                    <ul class="list-group mb-3">
+                        <li class="list-group-item list-group-item-action flex-column align-items-start active bg-dark border-0">
+                            <h3 class="mb-0">Exercises</h3>
+                        </li>
+                        <li class="list-group-item flex-column align-items-start">
+                            <div class="row">
+                                <div class="col-9 align-middle">
+                                    <h5 class="align-middle mb-0">Christmas Tree</h5>
+                                </div>
+                                <div class="col-3 align-middle">
+                                    <div class=" float-right justify-content-right d-flex">
+                                        <a target="_blank" title="Demo" href="https://snippets.daanrosendal.com/exercises/christmas-tree" class="text-dark pr-3 pl-2"><i class="fas fa-eye fa-lg align-middle"></i></a>
+                                        <a target="_blank" title="Code" href="https://github.com/DaanRosendal/snippets/tree/master/exercises/christmas-tree" class="text-dark pl-2"><i class="fab fa-github fa-lg align-middle"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item flex-column align-items-start">
+                            <div class="row">
+                                <div class="col-9 align-middle">
+                                    <h5 class="align-middle mb-0">FizzBuzz</h5>
+                                </div>
+                                <div class="col-3 align-middle">
+                                    <div class=" float-right justify-content-right d-flex">
+                                        <a target="_blank" title="Demo" href="https://snippets.daanrosendal.com/exercises/fizzbuzz" class="text-dark pr-3 pl-2"><i class="fas fa-eye fa-lg align-middle"></i></a>
+                                        <a target="_blank" title="Code" href="https://github.com/DaanRosendal/snippets/tree/master/exercises/fizzbuzz" class="text-dark pl-2"><i class="fab fa-github fa-lg align-middle"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item flex-column align-items-start">
+                            <div class="row">
+                                <div class="col-9 align-middle">
+                                    <h5 class="align-middle mb-0">Coding Problem 1</h5>
+                                </div>
+                                <div class="col-3 align-middle">
+                                    <div class=" float-right justify-content-right d-flex">
+                                        <a target="_blank" title="Demo" href="https://snippets.daanrosendal.com/exercises/coding-problem-1" class="text-dark pr-3 pl-2"><i class="fas fa-eye fa-lg align-middle"></i></a>
+                                        <a target="_blank" title="Code" href="https://github.com/DaanRosendal/snippets/tree/master/exercises/coding-problem-1" class="text-dark pl-2"><i class="fab fa-github fa-lg align-middle"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item flex-column align-items-start">
+                            <div class="row">
+                                <div class="col-9 align-middle">
+                                    <h5 class="align-middle mb-0">Coding Problem 2</h5>
+                                </div>
+                                <div class="col-3 align-middle">
+                                    <div class=" float-right justify-content-right d-flex">
+                                        <a target="_blank" title="Demo" href="https://snippets.daanrosendal.com/exercises/coding-problem-2" class="text-dark pr-3 pl-2"><i class="fas fa-eye fa-lg align-middle"></i></a>
+                                        <a target="_blank" title="Code" href="https://github.com/DaanRosendal/snippets/tree/master/exercises/coding-problem-2" class="text-dark pl-2"><i class="fab fa-github fa-lg align-middle"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
