--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                 <div class="col-3 align-middle">
                                     <div class=" float-right justify-content-right d-flex">
                                         <a target="_blank" title="Demo" href="https://snippets.daanrosendal.com/exercises/christmas-tree" class="text-dark pr-3 pl-2"><i class="fas fa-eye fa-lg align-middle"></i></a>
-                                        <a target="_blank" title="Code" href="https://github.com/DaanRosendal/snippets/tree/master/exercises/christmas-tree" class="text-dark pl-2"><i class="fab fa-github fa-lg align-middle"></i></a>
+                                        <a target="_blank" title="Code" href="https://github.com/DaanRosendal/snippets/tree/master/exercises/christmas-tree.php" class="text-dark pl-2"><i class="fab fa-github fa-lg align-middle"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -130,7 +130,7 @@
                                 <div class="col-3 align-middle">
                                     <div class=" float-right justify-content-right d-flex">
                                         <a target="_blank" title="Demo" href="https://snippets.daanrosendal.com/exercises/fizzbuzz" class="text-dark pr-3 pl-2"><i class="fas fa-eye fa-lg align-middle"></i></a>
-                                        <a target="_blank" title="Code" href="https://github.com/DaanRosendal/snippets/tree/master/exercises/fizzbuzz" class="text-dark pl-2"><i class="fab fa-github fa-lg align-middle"></i></a>
+                                        <a target="_blank" title="Code" href="https://github.com/DaanRosendal/snippets/tree/master/exercises/fizzbuzz.php" class="text-dark pl-2"><i class="fab fa-github fa-lg align-middle"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -143,7 +143,7 @@
                                 <div class="col-3 align-middle">
                                     <div class=" float-right justify-content-right d-flex">
                                         <a target="_blank" title="Demo" href="https://snippets.daanrosendal.com/exercises/coding-problem-1" class="text-dark pr-3 pl-2"><i class="fas fa-eye fa-lg align-middle"></i></a>
-                                        <a target="_blank" title="Code" href="https://github.com/DaanRosendal/snippets/tree/master/exercises/coding-problem-1" class="text-dark pl-2"><i class="fab fa-github fa-lg align-middle"></i></a>
+                                        <a target="_blank" title="Code" href="https://github.com/DaanRosendal/snippets/tree/master/exercises/coding-problem-1.php" class="text-dark pl-2"><i class="fab fa-github fa-lg align-middle"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -156,7 +156,7 @@
                                 <div class="col-3 align-middle">
                                     <div class=" float-right justify-content-right d-flex">
                                         <a target="_blank" title="Demo" href="https://snippets.daanrosendal.com/exercises/coding-problem-2" class="text-dark pr-3 pl-2"><i class="fas fa-eye fa-lg align-middle"></i></a>
-                                        <a target="_blank" title="Code" href="https://github.com/DaanRosendal/snippets/tree/master/exercises/coding-problem-2" class="text-dark pl-2"><i class="fab fa-github fa-lg align-middle"></i></a>
+                                        <a target="_blank" title="Code" href="https://github.com/DaanRosendal/snippets/tree/master/exercises/coding-problem-2.php" class="text-dark pl-2"><i class="fab fa-github fa-lg align-middle"></i></a>
                                     </div>
                                 </div>
                             </div>
