--- a/index.html
+++ b/index.html
@@ -112,6 +112,19 @@
                         <li class="list-group-item flex-column align-items-start">
                             <div class="row">
                                 <div class="col-9 align-middle">
+                                    <h5 class="align-middle mb-0">Random Cat Generator</h5>
+                                </div>
+                                <div class="col-3 align-middle">
+                                    <div class=" float-right justify-content-right d-flex">
+                                        <a target="_blank" title="Demo" href="https://snippets.daanrosendal.com/exercises/random-cats" class="text-dark pr-3 pl-2"><i class="fas fa-eye fa-lg align-middle"></i></a>
+                                        <a target="_blank" title="Code" href="https://github.com/DaanRosendal/snippets/tree/master/exercises/random-cats" class="text-dark pl-2"><i class="fab fa-github fa-lg align-middle"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item flex-column align-items-start">
+                            <div class="row">
+                                <div class="col-9 align-middle">
                                     <h5 class="align-middle mb-0">Christmas Tree</h5>
                                 </div>
                                 <div class="col-3 align-middle">
