--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
                         </li>
                     </ul>
 
-                    <!-- Bootstrapious Sidebars -->
+                    <!-- Exercises & Fun Stuff -->
                     <ul class="list-group mb-3">
                         <li class="list-group-item list-group-item-action flex-column align-items-start active bg-dark border-0">
-                            <h3 class="mb-0">Exercises</h3>
+                            <h3 class="mb-0">Exercises & Fun Stuff</h3>
                         </li>
                         <li class="list-group-item flex-column align-items-start">
                             <div class="row">
