improved main page description

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="col-lg-6 offset-lg-3 col-md-8 offset-md-2 col-sm-10 offset-sm-1">
                 <div class="jumbotron mt-3 mb-3">
                     <h1 class="display-4">Snippets <img src="favicon.png" height="50px"></h1>
-                    <p class="lead">For reuse of sublime code.</p>
+                    <p class="lead">A collection of code snippets and small projects meant for reusability and fun. </p>
                     <a target="_blank" href="https://github.com/DaanRosendal/snippets" class="text-dark"><i
                             class="fab fa-github fa-2x"></i></a>
                 </div>
